[refactor] Use SequencedCollections API of Java21